--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.4",
+    "@types/validator": "^13.7.4",
     "nuxt": "3.0.0-rc.6",
     "sass": "^1.54.0"
   },
   "dependencies": {
     "@formkit/nuxt": "^1.0.0-beta.9",
     "@formkit/themes": "^1.0.0-beta.9",
-    "normalize.css": "^8.0.1"
+    "nodemailer": "^6.7.7",
+    "normalize.css": "^8.0.1",
+    "validator": "^13.7.0"
   }
 }
