--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/validator": "^13.7.4",
     "nuxt": "3.0.0-rc.6",
-    "sass": "^1.54.0",
-    "typescript": "^4.7.4"
+    "sass": "^1.54.0"
   },
   "dependencies": {
     "@formkit/nuxt": "^1.0.0-beta.9",
