--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-NUXT_EMAIL_HOST=""
-NUXT_EMAIL_SENDER=""
-NUXT_EMAIL_SERVERNAME=""
-NUXT_EMAIL_PASSWORD=""
-NUXT_EMAIL_RECIPIENT=""
+EMAIL_HOST=""
+EMAIL_SENDER=""
+EMAIL_SERVERNAME=""
+EMAIL_PASSWORD=""
+EMAIL_RECIPIENT=""
