--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@types/nodemailer": "^6.4.4",
     "@types/validator": "^13.7.4",
-    "nuxt": "3.0.0-rc.6",
+    "nuxt": "^3.0.0-rc.8",
     "sass": "^1.54.0",
     "typescript": "^4.7.4"
   },
