--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@types/nodemailer": "^6.4.6",
     "@types/validator": "^13.7.4",
-    "nuxt": "^3.0.0-rc.13",
+    "nuxt": "^3.0.0",
     "sass": "^1.55.0",
     "typescript": "^4.8.4"
   },
