--- a/package.json
+++ b/package.json
@@ -7,17 +7,16 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.6",
-    "@types/validator": "^13.7.4",
-    "nuxt": "^3.0.0",
-    "sass": "^1.55.0",
-    "typescript": "^4.8.4"
+    "@types/nodemailer": "^6.4.7",
+    "@types/validator": "^13.7.12",
+    "nuxt": "^3.2.0",
+    "sass": "^1.58.1"
   },
   "dependencies": {
-    "@formkit/nuxt": "^1.0.0-beta.12",
-    "@formkit/themes": "^1.0.0-beta.12",
-    "nodemailer": "^6.8.0",
+    "@formkit/nuxt": "^1.0.0-beta.15",
+    "@formkit/themes": "^1.0.0-beta.15",
+    "nodemailer": "^6.9.1",
     "normalize.css": "^8.0.1",
-    "validator": "^13.7.0"
+    "validator": "^13.9.0"
   }
 }
