--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxtjs/html-validator": "^1.4.0",
     "@types/nodemailer": "^6.4.8",
     "@types/validator": "^13.7.17",
     "nuxt": "^3.6.1",
